# ml-component

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  template.yaml
data/processed/: car-data-processed.csv
models/: learner.pkl  metadata.json  model.pkl
models/models/: trainer.pkl
models/models/LightGBM/: model.pkl
models/models/WeightedEnsemble_L2/: model.pkl
models/models/WeightedEnsemble_L2/utils/: model_template.pkl  oof.pkl
models/utils/attr/LightGBM/: y_pred_proba_val.pkl
models/utils/data/: X.pkl  X_val.pkl  y.pkl  y_val.pkl
notebook/: eda.ipynb
src/: config.py
src/app/: api.py  database.py  interface.py  processor.py  trainer.py
src/data/: dataset.py  validator.json
src/pricing/: model.py
src/utils/: utilities.py
