[tool.poetry]
name = "ml-component"
version = "0.1.0"
description = "Machine Learning Component for Car Pricing"
authors = ["Milan Pavlovic - UNS PMF"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.5.1"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
boto3 = "^1.35.5"
pandas = "1.5.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
