[tool.poetry]
name = "ml-component"
version = "0.1.0"
description = "Machine Learning Component for Car Pricing"
authors = ["Milan Pavlovic - UNS PMF"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
boto3 = "^1.35.5"
seaborn = "^0.13.2"
loguru = "^0.7.2"
pandas = "^2.2.2"
autogluon = "^1.1.1"
mangum = "^0.17.0"
scikit-learn = "1.3.2"
awscli = "^1.34.10"


[tool.poetry.dev-dependencies]
ipykernel = "^6.29.5"
bandit = "^1.7.9"
flake8 = "^7.1.1"
pytest = "^8.3.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
